--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -29,7 +29,7 @@ jobs:
                 JF_URL: https://${{ vars.JF_URL }}/
                 JF_PROJECT: ${{ env.JF_PROJECT }}
               with:
-                  oidc-provider-name: github
+                  oidc-provider-name: jfrog-github-oidc
 
             - name: Checkout the repository
               uses: actions/checkout@v4
