--- a/.github/workflows/build-publish-v2.yml
+++ b/.github/workflows/build-publish-v2.yml
@@ -82,8 +82,8 @@ jobs:
               uses: docker/login-action@v3
               with:
                 registry: ${{ vars.JF_URL }}
-                username: ${{ steps.setup-cli.outputs.oidc-user }}
-                password: ${{ steps.setup-cli.outputs.oidc-token }}
+                username: ${{ vars.JF_DOCKER_USER }}
+                password: ${{ secrets.JF_ACCESS_TOKEN }}
 
             - name: Setup buildx instance
               uses: docker/setup-buildx-action@v3
