--- a/.github/workflows/barbershop-evidence.yml
+++ b/.github/workflows/barbershop-evidence.yml
@@ -87,8 +87,8 @@ jobs:
           echo "------------------attestation bundle-----------------"
           cat ${{ steps.attest.outputs.bundle-path }}
           echo "-----------------------------"
-          #cat ./attestation_bundle.json | jq -r '.dsseEnvelope.payload' | base64 -d > ./decoded_payload.json
-          #./scripts/generate_attestation_markdown.sh ./decoded_payload.json ./attestation_summary.md
+          cat ./attestation_bundle.json | jq -r '.dsseEnvelope.payload' | base64 -d > ./decoded_payload.json
+          ./scripts/generate_attestation_markdown.sh ./decoded_payload.json ./attestation_summary.md
 
       - name: Get Sonar report
         working-directory: ${{ env.PACKAGE_DIR }}
@@ -104,6 +104,7 @@ jobs:
       
 
       - name: Generate Sonar markdown
+        working-directory: ${{ env.PACKAGE_DIR }}
         run: |
           .github/scripts/packages/barber-shop-packages/scripts/generate_sonar_markdown.sh ./sonar_report.json ./sonar_report.md
 
