--- a/.github/workflows/barbershop-evidence.yml
+++ b/.github/workflows/barbershop-evidence.yml
@@ -36,21 +36,23 @@ jobs:
       - name: read props from docker-info.properties
         run: |
           source .github/scripts/packages/barber-shop-packages/jfrog-info.properties
-          echo "ARTIFACTORY_HOST= $ARTIFACTORY_HOSTR"
-          echo "LOCAL_REPO_NAME= $LOCAL_REPO_NAME"
-
+          echo "ARTIFACTORY_HOST=$ARTIFACTORY_HOST"
+          echo "LOCAL_REPO_NAME=$LOCAL_REPO_NAME"
+          echo "ARTIFACTORY_URL=$ARTIFACTORY_URL"
+          echo "OIDC_PROVIDER_NAME=$OIDC_PROVIDER_NAME"
+          
       - name: Setup JFrog CLI
         id: setup-cli
         uses: jfrog/setup-jfrog-cli@v4
         env:
-          JF_URL: ${{ vars.ARTIFACTORY_URL }}
+          JF_URL: $ARTIFACTORY_URL
         with:
-          oidc-provider-name: ${{ vars.OIDC_PROVIDER_NAME }}
+          oidc-provider-name: $OIDC_PROVIDER_NAME
 
       - name: Authenticate Docker
         uses: docker/login-action@v3
         with:
-          registry: ${{ vars.ARTIFACTORY_HOST }}
+          registry: $ARTIFACTORY_HOST
           username: ${{ steps.setup-cli.outputs.oidc-user }}
           password: ${{ steps.setup-cli.outputs.oidc-token }}
 
@@ -67,8 +69,8 @@ jobs:
         id: build-and-push
         working-directory: ${{ env.PACKAGE_DIR }}
         run: |
-          docker build --tag ${{ vars.ARTIFACTORY_HOST }}/${{ vars.LOCAL_REPO_NAME }}/${{ env.PACKAGE_NAME }}:${{ github.run_number }} --metadata-file metadata.json --push .
-          #jf rt docker-push ${{ vars.ARTIFACTORY_HOST }}/${{ vars.LOCAL_REPO_NAME }}/${{ env.PACKAGE_NAME }}:${{ github.run_number }} ${{ vars.LOCAL_REPO_NAME }}
+          docker build --tag $ARTIFACTORY_HOST/$LOCAL_REPO_NAME/${{ env.PACKAGE_NAME }}:${{ github.run_number }} --metadata-file metadata.json --push .
+          #jf rt docker-push $ARTIFACTORY_HOST/$LOCAL_REPO_NAME/${{ env.PACKAGE_NAME }}:${{ github.run_number }} ${{ vars.LOCAL_REPO_NAME }}
           digest=$(cat metadata.json | jq '.["containerimage.digest"]')
           echo "docker_digest=$digest" | tr -d '"' >> $GITHUB_OUTPUT
 
@@ -76,7 +78,7 @@ jobs:
         id: attest
         uses: actions/attest-build-provenance@v2
         with:
-          subject-name: ${{ vars.LOCAL_REPO_NAME }}/${{ env.PACKAGE_NAME }}/${{ github.run_number }}/list.manifest.json
+          subject-name: $LOCAL_REPO_NAME/${{ env.PACKAGE_NAME }}/${{ github.run_number }}/list.manifest.json
           subject-digest: ${{ steps.build-and-push.outputs.docker_digest }}
 
       - name: Extract and decode attestation content
@@ -117,7 +119,7 @@ jobs:
       #  working-directory: ${{ env.PACKAGE_DIR }}
       #  run: |
       #    jf evd create --sigstore-bundle ${{ steps.attest.outputs.bundle-path }} \
-      #      --subject-repo-path ${{ vars.LOCAL_REPO_NAME }}/${{ env.PACKAGE_NAME }}/${{ github.run_number }}/manifest.json \                        
+      #      --subject-repo-path $LOCAL_REPO_NAME/${{ env.PACKAGE_NAME }}/${{ github.run_number }}/manifest.json \                        
 
       - name: Attach sonar evidence using jfrog cli
         working-directory: ${{ env.PACKAGE_DIR }}
@@ -125,7 +127,7 @@ jobs:
           jf evd create \
           --package-name ${{ env.PACKAGE_NAME }} \
           --package-version ${{ github.run_number }} \
-          --package-repo-name ${{ vars.LOCAL_REPO_NAME }} \
+          --package-repo-name $LOCAL_REPO_NAME \
           --key "${{ secrets.JFROG_CLI_SIGNING_KEY }}" \
           --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" \
           --predicate-type https://jfrog.com/evidence/sonar-scan/v1 \
