--- a/.github/scripts/packages/barber-shop-packages/jfrog-info.properties
+++ b/.github/scripts/packages/barber-shop-packages/jfrog-info.properties
@@ -2,3 +2,5 @@ ARTIFACTORY_HOST=z0mariadev.jfrogdev.org
 ARTIFACTORY_URL=https://z0mariadev.jfrogdev.org/
 LOCAL_REPO_NAME=barber-shop-docker-local
 OIDC_PROVIDER_NAME=github-green-pizza
+PACKAGE_NAME=placeholder
+VERSION=1
