--- a/jfrog-info.properties
+++ b/jfrog-info.properties
@@ -1,1 +1,6 @@
-
+ARTIFACTORY_HOST=placeholder
+ARTIFACTORY_URL=placeholder
+LOCAL_REPO_NAME=placeholder
+OIDC_PROVIDER_NAME=github-green-pizza
+PACKAGE_NAME=placeholder
+VERSION=1
