--- a/.github/workflows/pizza-shop-packages.yml
+++ b/.github/workflows/pizza-shop-packages.yml
@@ -135,7 +135,7 @@ jobs:
           --package-version ${{ steps.read_props.outputs.VERSION }} \
           --package-repo-name ${{ steps.read_props.outputs.LOCAL_REPO_NAME }} \
           --key "${{ secrets.JFROG_CLI_SIGNING_KEY }}" \
-          --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}_xxx" \
+          --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" \
           --predicate-type https://sonarsource.com/evidence/sonarqube/v1 \
           --predicate ./assets/sonar/sonar_report.json \
           --markdown ./assets/sonar/sonar_report.md \
