--- a/jfrog-info.properties
+++ b/jfrog-info.properties
@@ -1,7 +1,7 @@
-ARTIFACTORY_HOST=apptrustswampup.jfrog.io
-ARTIFACTORY_URL=https://apptrustswampup.jfrog.io
+ARTIFACTORY_HOST=z0apptrustdev.jfrogdev.org
+ARTIFACTORY_URL=https://z0apptrustdev.jfrogdev.org
 LOCAL_REPO_NAME=napa-burger-docker-local
-OIDC_PROVIDER_NAME=github-green-pizza
+OIDC_PROVIDER_NAME=github-barber-shop
 PACKAGE_NAME=burger-shop
 VERSION=1.0.0
 SOURCE_RUN=91
