--- a/.github/workflows/build-test-l3-provenance.yml
+++ b/.github/workflows/build-test-l3-provenance.yml
@@ -23,8 +23,9 @@ jobs:
           NOW_URL: ${{ vars.NOW_URL }}
           RB_VERSION: '2.0.1'
         outputs:
-          image:  ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-          digest: ${{ steps.build.outputs.digest }}
+          digest: ${{ steps.build.outputs.digest }}      
+          rt_host: ${{ vars.ARTIFACTORY_HOST }}
+          image: ${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
         steps:
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v3
@@ -107,37 +108,12 @@ jobs:
                 echo "Full Event Payload: ${{ toJson(github.event) }}"
                 
     #SLSA Build Level 3 provenance
-    provenance:
-      needs: [build]
-      uses: slsa-framework/slsa-github-generator/.github/workflows/generator_container_slsa3.yml@v2.0.0
+    call-reusable:
+      needs: build 
+      uses: carmithersh/carmit-testing/.github/workflows/create_L3_attestation.yml@main 
       with:
-          image:  ${{ needs.build.outputs.image }}
-          digest: ${{ needs.build.outputs.digest }}
-          private-repository: true  
-      secrets:
-          registry-username: ${{ secrets.JF_ACCESS_USER }}
-          registry-password: ${{ secrets.JF_ACCESS_TOKEN }}
+        subject-name: oci://${{ needs.build.outputs.rt_host }}/${{ needs.build.outputs.image }}
+        subject-digest: ${{ needs.build.outputs.digest }}
+        oidc-provider: jfrog-github-oidc
+        jfrog-platform-host: ${{ needs.build.outputs.rt_host }}
 
-    test_options:
-      needs: [build]
-      runs-on: ubuntu-latest              
-      env:
-          DOCKER_REPO: 'test-docker-local'
-          IMAGE_NAME: 'my-very-cool-image:${{ github.run_number }}'
-          JF_URL: https://${{ vars.JF_URL }}/
-          JF_PROJECT: "default"
-          DOCKER_CLI_EXPERIMENTAL: enabled
-          NOW_URL: ${{ vars.NOW_URL }}
-          RB_VERSION: '2.0.1'
-      outputs:
-          image:  ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-          digest: ${{ steps.build.outputs.digest }}
-      steps:
-      - name: print event payload
-        id: event
-        run: |         
-          echo "Event Name: ${{ github.event_name }}"
-          echo "Repository: ${{ github.repository }}"
-          echo "Commit Message: ${{ github.event.head_commit.message }}"
-          echo "Pushed by: ${{ github.event.pusher.name }}"
-          echo "Full Event Payload: ${{ toJson(github.event) }}"
