--- a/.github/workflows/build-publish-v3.yml
+++ b/.github/workflows/build-publish-v3.yml
@@ -12,7 +12,7 @@ permissions:
   contents: read
 jobs:
     build-publish:        
-        runs-on: ubuntu-latest
+        runs-on: carmith-mac
         env:
           DOCKER_REPO: 'docker-local'
           IMAGE_NAME: 'github-jfrog-testing:1'      
