--- a/.github/workflows/build-publish-v3.yml
+++ b/.github/workflows/build-publish-v3.yml
@@ -96,12 +96,10 @@ jobs:
                 jf rt bp 
                 jf build-scan  --format sarif --fail=false 
    
-            - name: Generate docker attestation
-              id: attest
-              uses: actions/attest-build-provenance@v1
+            - name: Attest Build Provenance
+              uses: actions/attest-build-provenance@v3
               with:
-                subject-name: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-                subject-digest: ${{ steps.set_vars.outputs.docker_digest }}
-                push-to-registry: true
-           
+                subject-name: oci://${{ vars.JF_URL }}/${{ steps.build.outputs.image }}
+                subject-digest: ${{ steps.build.outputs.digest }} 
+               
       
