--- a/.github/workflows/build-publish-v3.yml
+++ b/.github/workflows/build-publish-v3.yml
@@ -72,6 +72,7 @@ jobs:
 
 
             - name: docker scan
+              if: false
               run: |  
                  jf docker pull ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
                  jf docker scan ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}                               
