--- a/.github/workflows/build-publish-v3.yml
+++ b/.github/workflows/build-publish-v3.yml
@@ -12,7 +12,7 @@ permissions:
   contents: read
 jobs:
     build-publish:        
-        runs-on: self-hosted
+        runs-on: ubuntu-latest #self-hosted
         env:
           DOCKER_REPO: 'docker-local'
           IMAGE_NAME: 'github-jfrog-testing:3'      
