--- a/.github/workflows/build-publish-v3.yml
+++ b/.github/workflows/build-publish-v3.yml
@@ -92,6 +92,5 @@ jobs:
               uses: actions/attest-build-provenance@v3
               with:
                 subject-name: oci://${{ vars.JF_URL }}/${{ steps.build.outputs.image }}
-                subject-digest: ${{ steps.build.outputs.digest }} 
-               
+                subject-digest: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
       
