--- a/.github/workflows/build-publish-v3.yml
+++ b/.github/workflows/build-publish-v3.yml
@@ -15,7 +15,7 @@ jobs:
         runs-on: self-hosted
         env:
           DOCKER_REPO: 'docker-local'
-          IMAGE_NAME: 'github-jfrog-testing:3'  
+          IMAGE_NAME: 'github-jfrog-testing:${{ github.run_number }}'  
           
         outputs:
           image: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
